--- a/critters_july.html
+++ b/critters_july.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-</head>
-
+<div class="col-md-6 center-block text-center">
+  <head>
+  <meta charset="utf-8">
+  <title>Untitled Document</title>
+  </head>
+  
 <body>
-<p> <img src="img/bug_july.png" width="1221" height="2201" alt=""> </p>
-<p>&nbsp;</p>
-<img src="img/fish_july.png" width="1220" height="1389" alt=""/>
-</body>
+  <p><img src="img/bug_july.png" alt="" width="1221" height="2201" align="middle"></p>
+  <p>&nbsp;</p>
+  <img src="img/fish_july.png" alt="" width="1220" height="1389" align="middle"/>
+  </body>
+</div>
 </html>
