--- a/critters_july.html
+++ b/critters_july.html
@@ -3,7 +3,7 @@
 <div class="col-md-6 center-block text-center">
   <head>
   <meta charset="utf-8">
-  <title>Untitled Document</title>
+  <title>cestislife's visual guides: July Critters</title>
   </head>
   
 <body>
