--- a/critters_july.html
+++ b/critters_july.html
@@ -10,6 +10,11 @@
   <p><img src="img/bug_july.png" alt="" width="1221" height="2201" align="middle"></p>
   <p>&nbsp;</p>
   <img src="img/fish_july.png" alt="" width="1220" height="1389" align="middle"/>
+  <p>&nbsp;</p>
+  <p><img src="img/NH_sea_july.png" alt="" width="1221" height="2201" align="middle"></p>
+  <p>&nbsp;</p>
+  <img src="img/SH_sea_july.png" alt="" width="1220" height="1389" align="middle"/>
   </body>
+
 </div>
 </html>
